src/app/components/user-playlists/user-playlists.component.css
main {
  display: flex;
  width: 100%;
  justify-content: center;
}

main ul {
  display: grid;
  gap: 12px 24px;
  grid-template-columns: repeat(auto-fit, minmax(28em, 1fr));
  /* 56.5 = 2 columns van 28 met .5 gap  */
  width: 57.5em;
  /* calc 90vw - padding .8em beide kanten */
  max-width: calc(90vw - 1.6em);
  align-items: center;
}

main ul li {
  width: 28em;
  /* calc 90vw - padding .8em beide kanten */
  max-width: calc(90vw - 1.6em);
}

main ul li button {
  display: flex;
  /* background: linear-gradient(#323232, #2f2f2f); */
  background: rgba(255, 255, 255, 0.1);
  width: 100%;
  height: 6em;
  gap: 1.3em;
  align-items: center;
  overflow: hidden;
  border-radius: 4px;
  transition: all .25s ease;
}

main ul li button:hover,
main ul li button:focus-visible {
  background: rgba(255, 255, 255, 0.2);
}

main ul li button:focus-visible {
  outline: var(--spotify-green) 2px solid;
}

main ul li button img {
  height: 100%;
}

main ul li button div {
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

main ul li button div h2 {
  overflow: hidden;
  text-overflow: '..';
  white-space: nowrap;
  text-align: start;
  color: var(--primary-text-color);
}

main ul li button div p {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  text-align: start;
  color: var(--secondary-text-color);
}

